--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -14,3 +14,8 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:cron]
+command=/usr/sbin/crond -f -d 0
+autostart=true
+autorestart=true
