--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -19,3 +19,7 @@ stderr_logfile_maxbytes=0
 command=/usr/sbin/crond -f -d 0
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
